apps/lottie-app/.deploy/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lams-app
  namespace: ${ENVIRONMENT}
  labels:
    app: lams-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lams-app
  template:
    metadata:
      labels:
        app: lams-app
    spec:
      containers:
        - name: lams-app
          image: ${DOCKER_IMAGE_PATH}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
