apps/lottie-app/.deploy/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lams-app-service
  namespace: ${ENVIRONMENT}
spec:
  selector:
    app: lams-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
